customer-app-operator/hand/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: customer1-ns
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: app
