customer-app-operator/hand/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-rules
  namespace: customer1-ns
spec:
  rules:
  - host: customer1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-service
          servicePort: 80
